--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,16 @@ img {
   flex-basis: calc((100% - 3 * 30px) / 3);
 }
 
+.card-project {
+  color: var(--contact-header-color);
+}
+
+.filter-item:hover{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
+  0px 4px 4px rgba(0, 0, 0, 0.06), 
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .card {
   border-bottom: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
