--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
+
 .page-header .container {
   display: flex;
   justify-content: flex-end;
@@ -186,6 +187,24 @@ img {
   align-items: center;
 }
 
+.overlay{
+  height: 600px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: 
+  linear-gradient(
+   to right, 
+   rgba(47, 48, 58, 0.4),
+   rgba(47, 48, 58, 0.4)),
+   url("../images/backgraund-imagehero.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  
+}
+
+
 .hero .container {
   display: flex;
   align-items: center;
@@ -251,7 +270,7 @@ img {
 
   text-align: center;
   background: #ffffff;
-  /* material shadow v1 */
+  
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -305,6 +324,12 @@ img {
 .visually-title {
   flex-basis: calc((100% - 4 * 30px) / 4);
 }
+
+  /* постоянные клиенты */
+
+  
+
+
 
 /* подвал*/
 .page-footer {
