--- a/css/styles.css
+++ b/css/styles.css
@@ -268,29 +268,17 @@ img {
   padding-left: 24px;
   padding-bottom: 30px;
   padding-right: 24px;
-
   text-align: center;
   background: #ffffff;
-  
-
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.social {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 16px;
-  fill: #AFB1B8
-  
-}
+/* социалки */
 
-.social-icon {
-  width: 44px;
-  height: 44px;
-}
+
 
 
 .subtitle {
@@ -331,9 +319,8 @@ img {
 
 .visually {
   display: flex;
-  align-items: center; 
-  margin: 0;
-  padding: 0; 
+  align-items: center;
+  justify-content: center; 
 }
 
 
@@ -343,17 +330,15 @@ img {
 
 /* о нас иконки */
 
-
-.visually-icon {
-  border: 1px;
-  width: 270px;
-  height: 120px;
-  background: #F5F4FA;
-  border-radius: 4px;
+.vis {
+  display: flex;
   justify-content: center;
   align-items: center;
+  background-color: var(--box-backgroun-color);
+  width: 270px;
+  height: 120px;
   margin-bottom: 30px;
-  
+
 }
 
   /* постоянные клиенты */
