--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,8 @@ img {
   margin-right: 10px;
 }
 
-.social-icon:hover {
+.social-icon:hover,
+.social-icon:focus {
   background-color: var(--accent-color);
   fill: var(--background-color);
   border-radius: 50%;
@@ -505,11 +506,14 @@ img {
 }
 
 .footer-social-title {
-  font-weight: 700;
-  line-height: 1.14;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--background-color);
-  margin-bottom: 20px;
+  line-height: 30px;
 }
 
 .footer-social-icons-item {
@@ -574,7 +578,9 @@ img {
   color: var(--contact-header-color);
 }
 
-.filter-item:hover {
+
+.filter-item:hover,
+.filter-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 
   0px 4px 4px rgba(0, 0, 0, 0.06), 
   1px 4px 6px rgba(0, 0, 0, 0.16);
